Added basic implementation and tests

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "varvaruk/payments-fee-calculator",
-    "description": "Your project description",
+    "description": "Payments fee calculator",
     "type": "project",
     "license": "MIT",
     "autoload": {
@@ -10,17 +10,23 @@
         }
     },
     "require": {
-        "php": "^7.4"
+        "php": "^8.0",
+        "ext-bcmath": "*",
+        "guzzlehttp/guzzle": "^7.7",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^9.0",
-        "friendsofphp/php-cs-fixer": "^3.0"
+        "roave/security-advisories": "dev-latest",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "config": {
-        "sort-packages": true,
-        "bin-dir": "bin"
+        "sort-packages": true
     },
     "scripts": {
+        "check-style": "phpcs --standard=PSR12 src/",
+        "autoload": "composer dump-autoload",
         "phpunit": "phpunit",
         "fix-cs": "php-cs-fixer fix",
         "test-cs": "php-cs-fixer fix --dry-run -v",
